--- a/Calculator/appsettings.json
+++ b/Calculator/appsettings.json
@@ -6,5 +6,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=DESKTOP-VPPTBOE\\SQLEXPRESS;Initial Catalog=Calculator;User Id=oony;Password=oony;",
+          "tableName": "Log",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  }
 }
