--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="NSwag.AspNetCore" Version="13.2.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.5.0" />
   </ItemGroup>
 
 </Project>
