--- a/Calculator/appsettings.Development.json
+++ b/Calculator/appsettings.Development.json
@@ -5,5 +5,18 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=DESKTOP-VPPTBOE\\SQLEXPRESS;Initial Catalog=Calculator;User Id=oony;Password=oony;",
+          "tableName": "Log",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
   }
 }
