save history in DB

--- a/Calculator/appsettings.Development.json
+++ b/Calculator/appsettings.Development.json
@@ -6,15 +6,64 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=DESKTOP-VPPTBOE\\SQLEXPRESS;Initial Catalog=Calculator;User Id=oony;Password=oony;"
+  },
   "Serilog": {
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Error"
+      }
+    },
     "WriteTo": [
       {
         "Name": "MSSqlServer",
         "Args": {
           "connectionString": "Server=DESKTOP-VPPTBOE\\SQLEXPRESS;Initial Catalog=Calculator;User Id=oony;Password=oony;",
           "tableName": "Log",
-          "autoCreateSqlTable": true
+          "autoCreateSqlTable": true,
+          "columnOptionsSection": {
+            "disableTriggers": true,
+            "addStandardColumns": [ "LogEvent" ],
+            "removeStandardColumns": [ "MessageTemplate", "Properties" ],
+            "additionalColumns": [
+              {
+                "ColumnName": "Argument1",
+                "DataType": "float",
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "Argument2",
+                "DataType": "float",
+                "AllowNull": true
+              },
+              {
+                "ColumnName": "Operation",
+                "DataType": "varchar",
+                "AllowNull": true,
+                "DataLength": 30
+              },
+              {
+                "ColumnName": "Result",
+                "DataType": "float",
+                "AllowNull": true
+              }
+            ],
+            "Argument1": {
+              "columnName": "Argument1"
+            },
+            "Argument2": {
+              "columnName": "Argument2"
+            },
+            "Operation": {
+              "columnName": "Operation"
+            },
+            "Result": {
+              "columnName": "Result"
+            }
+          }
         }
       }
     ]
